# trackformer

./: .gitignore  Dockerfile.builder  build_with_docker.sh  pyproject.toml  setup.py
src/trackformer/models/ops/: setup.py  setup_settings.py
